--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@ export_presets.cfg
 .mono/
 data_*/
 mono_crash.*.json
+
+#Github
+README.md
+
+#Visual Studio Ignores
+.vs/ChSR - ChomonSpaceRace/FileContentIndex/
+.vs/ChSR-Chomon-Space-Race/FileContentIndex/    
