--- a/ChSR - ChomonSpaceRace.csproj
+++ b/ChSR - ChomonSpaceRace.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Godot.NET.Sdk/4.5.0-dev">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <RootNamespace>ChSRChomonSpaceRace</RootNamespace>
   </PropertyGroup>
